<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">back_btn</string>
    <string name="favourite">Favourite</string>
    <string name="start">Start</string>
    <string name="starttxt">00.00</string>
    <string name="loading">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equiliser_btn">equiliser</string>
    <string name="timer_btn">Timer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="playlist">playlist</string>
    <string name="share">share</string>
    <string name="icon">Icon</string>
    <string name="text_nav">Welcome to\nWorld of Music </string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="songimg">songimg</string>
    <string name="playlistname">playlistname</string>
    <string name="playlistdelete">playlistdelete</string>
    <string name="username">Username</string>
    <string name="add_songs">add songs</string>
    <string name="remove">Remove</string>
    <string name="removetext">Remove</string>
    <string name="removetxt">Remove</string>
</resources>