<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Playlist_Activity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn_playlist"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back_icon"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist"
            android:gravity="center"
            android:text="@string/playlist_btn"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:scrollbarThumbVertical="@drawable/ic_scrollbar"
        android:scrollbars="vertical"
        android:paddingBottom="40dp"
        android:layout_marginTop="10dp"
        />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playlistbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add"
        app:iconSize="35dp"
        android:backgroundTint="@color/white"
        app:iconTint="@color/orange"
        app:strokeWidth="2dp"
        app:strokeColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>