<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">



 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

             <Button
                 android:id="@+id/shuffle_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/shuffle_btn"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:drawableTop="@drawable/ic_shuffle"
                 android:text="@string/shuffle_btn"
                 android:textColor="@color/black"
                 android:textAllCaps="false"
                 />

             <Button
                 android:id="@+id/favourites_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:contentDescription="@string/favourites_btn"
                 android:drawableTop="@drawable/ic_favorite"
                 android:text="@string/favourites_btn"
                 android:textColor="@color/black"
                 android:textAllCaps="false"

                 />
             <Button
                 android:id="@+id/playlists_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:contentDescription="@string/playlist_btn"
                 android:drawableTop="@drawable/ic_playlist"
                 android:text="@string/playlist_btn"
                 android:textColor="@color/black"
                 android:textAllCaps="false"
                 />
         </LinearLayout>

         <TextView
             android:id="@+id/total_song"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/total_songs"
             android:textColor="@color/black"
             android:layout_margin="10dp"
             />

         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/music_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars ="vertical"
             android:scrollbarThumbVertical="@drawable/ic_scrollbar"

             />


     </LinearLayout>
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nowplaying"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:name="com.example.musicplayer.NowPlaying"
         tools:layout="@layout/fragment_now_playing"
         />

 </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
/>

</androidx.drawerlayout.widget.DrawerLayout>